# FAIRY

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.integration.yml  docker-compose.yml  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wails.json
cmd/fairy/: main.go  main_test.go
cmd/fairy-desktop/: main.go
configs/: example-scene-generate.json  example-turn-volcengine.json  example-turn.json  plugins.json
crates/fairy-domain/: Cargo.toml
crates/fairy-harness/: Cargo.toml
crates/fairy-harness/src/: compaction.rs  gateway.rs  history.rs  intelligence.rs  lib.rs  policy.rs  prompt_compiler.rs  reply.rs  runtime.rs  search.rs  state.rs
crates/fairy-harness/tests/: turn_flow.rs
crates/fairy-intelligence/: Cargo.toml
crates/fairy-intelligence/src/: lib.rs  search.rs  store.rs
crates/fairy-intelligence/src/store/: conversation.rs  extraction.rs  memory.rs  mod.rs  retrieval.rs  schema.rs  tests.rs
crates/fairy-model-openai/: Cargo.toml
crates/fairy-model-openai/src/: chat_request.rs  chat_stream.rs  chat_usage.rs  lib.rs  request.rs  response_stream.rs  shared.rs  usage.rs
crates/fairy-model-openai/tests/: chat_completions_gateway.rs  responses_gateway.rs
crates/fairy-storage/: Cargo.toml
crates/fairy-storage/src/: atomic_json.rs  character_appearance_store.rs  character_store.rs  legacy_cleanup.rs  lib.rs  model_config_store.rs  search_config_store.rs  secret_store.rs  user_profile_store.rs
docs/: ROADMAP.md
fairy/: architecture_test.go  assets.go  go.mod  go.sum  main.go  tray.go  windows.go  windows_bounds_stub.go  windows_darwin.go  windows_test.go
fairy/api/: admin_test.go  auth_test.go  character.go  config.go  console_static.go  endpoint_session_integration_test.go  identity.go  infrastructure.go  infrastructure_integration_test.go  intelligence.go  observability.go  observability_test.go  profile.go  runtime_test_helpers_test.go  server.go  server_test.go  session_events_test.go  session_messages.go  session_ws_test.go  surface_session_integration_test.go  usage.go  visual_asset.go  ws_session.go
fairy/app/: doc.go  run.go  semantic_embedding.go  speech_adapter.go  tray.go  windows.go  windows_bounds_stub.go  windows_darwin.go  windows_test.go
fairy/character/: catalog.go  catalog_test.go  package.go  package_test.go  service.go  service_store_test.go  service_test.go
fairy/cmd/: admin.go  cancel.go  completion.go  db.go  db_test.go  identity.go  observability.go  output.go  root.go  root_test.go  serve.go  session.go  status.go  turn.go
fairy/companion/: ambient.go  ambient_test.go  attention_drift.go  attention_drift_test.go  cognition.go  cognition_test.go  compaction.go  compaction_test.go  context_window.go  continuation.go  continuation_test.go  doc.go  engine_wiring_test.go  events_test.go  expression_select_test.go  extract.go  extract_test.go  format_group_input_test.go  idle_backoff.go  idle_backoff_test.go  interaction.go  interaction_test.go  knowledge_ingest.go  knowledge_ingest_test.go  lifecycle.go  lifecycle_chainindex_test.go  lifecycle_publish_test.go  lifecycle_test.go  loop_metrics.go  loop_metrics_test.go  manual_agent_loop_test.go  manual_toolcall_loop_test.go  message_telemetry_test.go  model_fixture_test.go  participation.go  participation_engine.go  participation_event.go  participation_event_test.go  participation_test.go  ports.go  (+43 more)
fairy/config/: doc.go  model_connection.go  model_connection_test.go  reader.go  reader_test.go  semantic_embedding.go  semantic_embedding_test.go  service.go  service_test.go  web_search.go  web_search_test.go
fairy/core/: server.go  server_test.go
fairy/coreclient/: admin.go  client.go  client_test.go  observability.go  raw_request.go  session.go  session_ws.go  sse.go  types.go  types_metrics_test.go  visual.go
fairy/identity/: store.go  (+1 more)
scripts/: backup-postgres.sh  prepare-local-bge-assets.sh  restore-postgres.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: control-panel-dialog.json  default.json
src-tauri/src/: app_error.rs  app_state.rs  audio.rs  capability.rs  character_asset_protocol.rs  character_package.rs  desktop.rs  lib.rs  main.rs  memory.rs  native_snapshot_smoke.rs  visual_registry.rs
src-tauri/src/ipc/: character.rs  companion.rs  mod.rs  settings.rs
surfaces/: go.mod  go.sum
web/: index.html  package-lock.json  package.json  vite.config.mjs  vite.config.ts
(+476 files in other folders)
