[package]
name = "fairy-desktop"
version = "0.1.0"
description = "FAIRY desktop companion"
authors = ["Rinai-R"]
edition = "2024"
rust-version = "1.95"

[lib]
name = "fairy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fairy"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
fairy-domain = { path = "../crates/fairy-domain" }
fairy-harness = { path = "../crates/fairy-harness" }
fairy-intelligence = { path = "../crates/fairy-intelligence" }
fairy-model-openai = { path = "../crates/fairy-model-openai" }
fairy-storage = { path = "../crates/fairy-storage" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
