[package]
name = "fairy-intelligence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
fairy-domain = { path = "../fairy-domain" }
fairy-harness = { path = "../fairy-harness" }
futures-util.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
