[package]
name = "fairy-model-openai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
eventsource-stream.workspace = true
fairy-domain = { path = "../fairy-domain" }
fairy-harness = { path = "../fairy-harness" }
futures-util.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true
